# GeoSynth

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: README.md
docs/source/: api.rst  conf.py  data.rst  index.md
geosynth/: __init__.py  __main__.py  _download.py  _plt_to_numpy.py  _visualize_instances.py  common.py  data.py  dataset.py  helpers.py  progress.py  scene.py
geosynth/cli/: download.py  main.py
geosynth/mappings/: __init__.py  _turbo.py  semantic.py  utils.py
geosynth/models/: lighting.py
tests/: conftest.py  test_scene.py  test_zip.py
tests/models/: test_lighting.py
